Disallow GCP endpoints in global routing